--- a/styles.css
+++ b/styles.css
@@ -3,10 +3,23 @@ body {
     color: white;
 }
 
-.vl {
-    border-right: 2px solid white;
-    height: fit-content;
+h1 {
+    color : #c38a37;
 }
+
+h2 {
+    color : #eabe71;
+    
+}
+
+h3 {
+    color : #2f6568;
+}
+
+.extraInformation {
+    color : #7d9ea2;
+}
+
 
 header {
     display: flex;
@@ -17,6 +30,11 @@ header li {
     float: right;
     margin-right: 5%;
     font-size:xx-large;
+}
+
+header h1,h2 {
+    margin-top: 0;
+    margin-bottom: 0;
 }
 
 header table {
@@ -48,11 +66,31 @@ main {
     margin: 0 auto;
 }
 
+main a {
+    color: #7d9ea2;
+}
+
+/* visited link */
+main a:visited {
+    color: #7d9ea2;
+}
+
+/* mouse over link */
+main a:hover {
+    color: #2f6568;
+}
+
+/* selected link */
+main a:active {
+    color: #2f6568;
+}
+
 footer {
     text-align: center;
     margin: 0 auto;
-    background-color: gray;
-    
+    left: 0;
+    bottom: 0;
+    width: 100%;
 }
 
 footer li {
@@ -62,7 +100,89 @@ footer li {
 footer ul {
     margin-bottom: 0;
 }
+footer a {
+    color:white;
+    text-decoration: none;
+}
 
 footer p {
     margin-top : 0;
 }
+
+::selection {
+    background-color: white;
+    color:black;
+}
+
+.loader {
+    display: block;
+    width: 84px;
+    height: 84px;
+    position: relative;
+    transform-origin: 0%,-50%;
+  }
+  
+  .loader:before {
+    content: "";
+    position: absolute;
+    width: 64px;
+    height: 64px;
+    border-radius: 50%;
+    background: white;
+    animation: push_401 2s infinite linear;
+  }
+  
+  .loader:after {
+    content: "";
+    position: absolute;
+    width: 64px;
+    height: 64px;
+    border-radius: 50%;
+    background: #c38a37;
+    transform : translate(0% , 25%);
+  }
+
+  .profilePicture {
+    width:100%;
+    height:100%;
+    border-radius: 20%;
+    
+  }
+  
+  .borderSpacer {
+    padding-right: 20px;
+  }
+  @keyframes push_401 {
+    0%  {
+      transform: translate(0% , 25%)  scale(1);
+      background: #c38a37;
+    }
+  
+    100% {
+      transform: translate(-50%, -75%) scale(0);
+      background: #eabe71;
+    }
+  }
+
+  .experience {
+    margin: 0 auto;
+    width: 100%;
+  }
+
+  .experience td {
+    width: 50%;
+    vertical-align: top;
+  }
+
+  .experience h1,h2,h3 {
+    margin-top : 0;
+    margin-bottom : 0;
+  }
+
+  .experience h2 {
+    font-size: large;
+  }
+
+  .experience h3 {
+    font-size: medium;
+  }
