--- a/css/styles.css
+++ b/css/styles.css
@@ -179,10 +179,10 @@ h3 {
     display: flex;
     align-items: center;
   }
-
   .borderSpacer section {
     padding-left: 2%;
   }
+  
 }
 
 .sidepanel {
@@ -233,7 +233,7 @@ h3 {
   }
 
   .borderSpacer {
-
+    padding-right: 5%;
     display: flex;
     align-items: center;
   }
@@ -253,6 +253,11 @@ h3 {
     font-size: xx-large;
     justify-content: flex-end;
   }
+
+  .borderSpacer section {
+    padding-left: 2%;
+  }
+
 }
 
 @media only screen and (max-width: 700px) {
@@ -284,6 +289,8 @@ h3 {
     display: none;
   }
 
+  
+
 }
 @media only screen and (min-width: 700px) {
   .experienceAndEducation {
@@ -312,5 +319,14 @@ h3 {
     margin-right: 5%;
     font-size: xx-large;
     justify-content: flex-end;
+  }
+
+  .borderSpacer {
+    padding-right: 5%;
+    display: flex;
+    align-items: center;
+  }
+  .borderSpacer section {
+    padding-left: 2%;
   }
 }
