--- a/css/projectsStyle.css
+++ b/css/projectsStyle.css
@@ -1,5 +1,3 @@
-
-
 .projectsMain h1 {
     font-size: 30px;
     margin-top: 30px;
@@ -13,38 +11,10 @@
 }
 
 
-.projectsMain main {
 
-    display: flex;
 
-}
 
-.projectsMain section {
-    width: 40%;
 
-}
-
-.projectsMain aside {
-    width: 50%;
-    margin: auto auto;
-    align-items: center;
-}
-
-.projectsMain iframe {
-    width: 50vw;
-    height: 50vh;
-    border-radius: 5%;
-    border-width: 5px;
-    border-color: white;
-}
-
-.projectsMain img {
-    width: 50vw;
-    height: 50vh;
-    border-style: solid;
-    border-radius: 5%;
-    border-width: 5px;
-}
 
 
 .firstUl ul {
@@ -53,33 +23,26 @@
     list-style: none;
 }
 
-.toBigUL {
-    display: inline-block;
-    margin: 0 7px;
-    list-style: none;
-    height: 86vh;
-    overflow-y: scroll;
 
-   
-}
+
 ::-webkit-scrollbar {
     width: 10px;
-  }
-  
-   ::-webkit-scrollbar-track {
+}
+
+::-webkit-scrollbar-track {
     background: rgb(85, 85, 85);
     border-radius: 10px;
-  }
-  
-   ::-webkit-scrollbar-thumb {
+}
+
+::-webkit-scrollbar-thumb {
     background: white;
     border-radius: 10px;
-  }
-  
-  
-  ::-webkit-scrollbar-thumb:hover {
-    background: lightgray ;
-  }
+}
+
+
+::-webkit-scrollbar-thumb:hover {
+    background: lightgray;
+}
 
 .toBigUL ul {
     list-style: none;
@@ -104,4 +67,87 @@
     background-size: contain;
     background-repeat: no-repeat;
     margin-left: -35px;
+}
+
+.toBigUL {
+    display: inline-block;
+    margin: 0 7px;
+    list-style: none;
+
+}
+
+.projectsMain aside {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.projectsMain main {
+
+    display: flex;
+    overflow: hidden;
+    justify-content: center;
+    align-items: center;
+}
+
+.projectsMain iframe {
+    width: 90%;
+    height: 90%;
+    border-radius: 5%;
+    border-width: 5px;
+    border-color: white;
+}
+
+.projectsMain img {
+    width: 90%;
+    height: 90%;
+    border-style: solid;
+    border-radius: 5%;
+    border-width: 5px;
+}
+
+@media only screen and (min-width: 768px) {
+    .projectsMain main {
+
+        display: flex;
+
+    }
+
+    .projectsMain section {
+        width: 40%;
+
+    }
+
+    .projectsMain aside {
+        width: 50%;
+        margin: auto auto;
+        align-items: center;
+    }
+
+    .toBigUL {
+        display: inline-block;
+        margin: 0 7px;
+        list-style: none;
+        height: 86vh;
+        overflow-y: scroll;
+
+
+    }
+
+    .projectsMain iframe {
+        width: 50vw;
+        height: 50vh;
+        border-radius: 5%;
+        border-width: 5px;
+        border-color: white;
+    }
+
+    .projectsMain img {
+        width: 50vw;
+        height: 50vh;
+        border-style: solid;
+        border-radius: 5%;
+        border-width: 5px;
+    }
 }
