--- a/css/styles.css
+++ b/css/styles.css
@@ -252,9 +252,19 @@ h3 {
   background-color: #111;
   overflow-x: hidden;
   transition: 0.5s;
-  padding-top: 60px;
-  height: 100%;
 
+  height: 100%;
+}
+
+.sidepanel button {
+  position: absolute;
+  right:0;
+  margin-top: 30px;
+  margin-right: 10px;
+}
+
+.sidepanel div {
+  padding: 50% 0 50% 0;
 }
 
 .sidepanel a {
