--- a/css/styles.css
+++ b/css/styles.css
@@ -57,6 +57,7 @@ h2 {
 
 .mainIndex {
   width: 70%;
+  min-height: 70vh;
   margin: 0 auto;
 }
 
@@ -80,11 +81,13 @@ main a:active {
 }
 
 footer {
+  position:relative;
   text-align: center;
   margin: 0 auto;
   left: 0;
   bottom: 0;
   width: 100%;
+  height: 2vh;
 }
 
 footer li {
@@ -311,6 +314,7 @@ h3 {
 
   .mainHeader ul {
     display: flex;
+    height: 2vh;
     justify-content: flex-end;
   }
 
